@@ -2,6 +2,7 @@ package name.richardson.james.hearthstone;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
 
 import com.avaje.ebean.EbeanServer;
 
@@ -23,5 +24,15 @@ public class DatabaseHandler extends Database {
     this.logger.debug(String.format("Attempting to return HomeRecords created by %s.", playerName));
     return this.getEbeanServer().find(HomeRecord.class).where().ieq("createdBy", playerName).findList();
   }
+  
+  public List<HomeRecord> findHomeRecordsByOwnerAndWorld(final String playerName, final UUID uuid) {
+    this.logger.debug(String.format("Attempting to return HomeRecords created by %s.", playerName));
+    return this.getEbeanServer().find(HomeRecord.class).where().ieq("createdBy", playerName).eq("worldUUID", uuid).findList();
+  }
 
+  // this is to get around a bug where optimistic lock errors will occur if you attempt to delete the records normally
+  public int deleteHomes(String plyaerName, final UUID uuid) {
+    return this.database.createSqlUpdate("DELETE from hearthstone_homes WHERE world_uuid='" + uuid.toString() + "' AND created_by='" + plyaerName + "'").execute();
+  }
+  
 }
