@@ -4,6 +4,7 @@ plugin-enabled: %s has been enabled!
 panic: A severe error has occurred! Disabling plugin.
 unable-to-use-database: Unable to initialise database!
 no-database: No database schema found. Creating a new one.
+homes-loaded: %d homes loaded.
 wildcard-permission-description: Allow unrestricted use of the %s command.
 
 # Generic messages
